--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ segment-analytics-python
 python-dotenv
 starlette
 envclasses
-./pypi/qdrant_analytics_events-1.0.13.tar.gz
+./pypi/qdrant_analytics_events-1.0.14.pre-release.tar.gz
