--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-pytest
-pytz
-fastapi
-httpx
-uvicorn
-segment-analytics-python
-python-dotenv
-starlette
-envclasses
+pytest>=8.3.3
+pytz>=2024.2
+fastapi>=0.115.2
+httpx>=0.27.2
+uvicorn>=0.31.1
+segment-analytics-python>=2.3.3
+python-dotenv>=1.0.1
+starlette>=0.41.3
+envclasses>=0.3.1
 ./pypi/qdrant_analytics_events-1.0.14.pre-release.tar.gz
